# serializer version: 1
# name: test_device_registry[captur_fuel]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'renault',
          'VF1CAPTURFUELVIN',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Renault',
      'model': 'Captur ii',
      'model_id': 'XJB1SU',
      'name': 'REG-CAPTUR-FUEL',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_device_registry[captur_phev]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'renault',
          'VF1CAPTURPHEVVIN',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Renault',
      'model': 'Captur ii',
      'model_id': 'XJB1SU',
      'name': 'REG-CAPTUR_PHEV',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_device_registry[twingo_3_electric]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'renault',
          'VF1TWINGOIIIVIN',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Renault',
      'model': 'Twingo iii',
      'model_id': 'X071VE',
      'name': 'REG-TWINGO-III',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_device_registry[zoe_40]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'renault',
          'VF1ZOE40VIN',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Renault',
      'model': 'Zoe',
      'model_id': 'X101VE',
      'name': 'REG-ZOE-40',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_device_registry[zoe_50]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'renault',
          'VF1ZOE50VIN',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Renault',
      'model': 'Zoe',
      'model_id': 'X102VE',
      'name': 'REG-ZOE-50',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
